# Abi-Financial-Assistant

./: .env.example  .gitignore  LICENSE  README.md  build.js  launch.js
backend/: .gitignore  AbiAssistant.spec  abi_backend.spec  package-lock.json  privacy_guard.py  pyproject.toml  refresh_data.py  server.py  tools.py
bridge/: .gitignore  actions.js  package-lock.json  package.json  sync.js
frontend/: index.html  package-lock.json  package.json
frontend/electron/: main.js
frontend/src/: App.jsx
